Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-23083

BareMetal: SDCC parser ignores the linker warning message

XMLWordPrintable

    • 6d089f33f7719f96614ac01f19587393a2dc8dc9 (qt-creator/qt-creator/4.11)

      in a form of:

      at 1: warning 117: unknown compiler option '--xram-loc2' ignored
      

        For Gerrit Dashboard: QTCREATORBUG-23083
        # Subject Branch Project Status CR V

            kuzulis Denis Shienkov
            kuzulis Denis Shienkov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes