BareMetal: Parse missed SDCC compiler warning

... in a form like:

 at 1: warning 117: unknown compiler option '--xram-loc2' ignored

Fixes: QTCREATORBUG-23083
Change-Id: If428cb7317d0c13246fcb0c1741d015a80af91b7
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>